# AVX512VectorLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: AVX512VectorLib.hpp
src/: AVX512VectorLib.cxx
tests/: CMakeLists.txt  atan.cxx
